styles.css
:root {
  --navbar-bg-color: #ffffff;
  --card-bg-color: #ffffff;
  --text-white: #ffffff;
  --spring-green-color: #6db33f;
  --version-green-color: #8fdf82;
  --button-color: #111111;
  --projects-color: #eaf2f2;
  --text-card-description: #555555;
  --nav-menu-color: #191e1e;
  --nav-menu-dropdown-text: #98afae;
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  overflow-x: hidden;
}

body {
  margin-top: 52px;
  font-family: Open Sans, sans-serif;
}

.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 52px;
  padding-left: 12px;
  display: flex;
  background-color: var(--navbar-bg-color);
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  box-sizing: border-box;
  z-index: 100;
}

.logo-container {
  width: 200px;
  height: auto;
  cursor: pointer;
}

.logo {
  width: 100%;
  height: 100%;
  display: block;
}

.logo .st0 {
  fill: var(--spring-green-color);
}

.logo .st1 {
  fill: var(--spring-green-color);
}

.logo .st3 {
  fill: var(--navbar-bg-color);
}

.nav-links {
  display: none;
}

.nav-links__list {
  list-style: none;
  margin: 0;
  padding: 0;
  height: 100%;
  display: flex;
  align-items: center;
  gap: 20px;
  font-size: 0.9em;
  font-weight: 600;
}

.nav-links__item {
  position: relative;
  height: 100%;
  display: flex;
  align-items: center;
}

.nav-links__item-nav-menu {
  flex-direction: column;
}

.dropdown-toggle {
  text-decoration: none;
  color: var(--button-color);
  padding: 0 5px;
  transition: color 0.3s ease;
  display: flex;
  align-items: center;
  height: 100%;
  cursor: pointer;
}

.dropdown-toggle:hover {
  color: var(--spring-green-color);
}

.span-nav-menu {
  color: var(--text-white);
  border-bottom: 1px solid hsla(0, 0%, 100%, 0.4);
  height: 60px;
  margin: 1rem 0;
  font-size: 2rem !important;
  width: 100%;
}

.arrow-down {
  margin-left: 5px;
  width: 14px;
  height: 14px;
  stroke: currentColor;
}

.arrow-down-nav-menu {
  margin-left: auto;
  width: 30px;
  height: 30px;
}

.dropdown-menu {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: var(--navbar-bg-color);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  list-style: none;
  padding: 10px 0;
  margin: 0;
  min-width: 220px;
  z-index: 1001;
  border-radius: 4px;
  text-align: left;
}

.dropdown-nav-menu {
  position: static;
  background-color: var(--nav-menu-color);
  min-width: 0;
  width: 100%;
}

.dropdown-menu li {
  height: auto;
  display: block;
}

.last-item {
  margin-bottom: 24px;
}

.arrow-up-right-from-square {
  margin-left: 5px;
  width: 12px;
}

.dropdown-menu li a {
  padding: 8px 30px;
  color: var(--button-color);
  text-decoration: none;
  display: block;
  white-space: nowrap;
  font-weight: 400;
  font-size: 1em;
  line-height: 1.5;
}

.dropdown-nav-menu li a {
  color: var(--nav-menu-dropdown-text);
  font-size: 1.2rem;
  padding: 0.2rem 0;
}

.dropdown-menu li a:hover {
  color: var(--spring-green-color);
}

.hamburger {
  width: 52px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.hamburger:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.hamburger span {
  display: block;
  width: 24px;
  height: 2px;
  background-color: var(--button-color);
  transition: all 0.3s ease;
  margin-bottom: 5px;
}

.hamburger span:last-child {
  margin-bottom: 0;
}

.navigation-menu {
  overflow-y: scroll;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
  background-color: var(--nav-menu-color);
  color: var(--text-white);
}

.nav-menu-section {
  padding: 0 3rem 3rem 3rem !important;
}

.nav-menu-section .nav-links__item {
  width: 100%;
}

.close-icon-wrapper {
  margin-left: auto;
  width: 52px;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.close-icon-wrapper:hover {
  background-color: #111111;
}

.close-icon {
  position: relative;
  width: 24px;
  height: 24px;
  cursor: pointer;
}

.close-icon::before,
.close-icon::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  height: 2px;
  background-color: var(--navbar-bg-color);
  transform-origin: center;
  transition: transform 0.3s ease;
}

.close-icon::before {
  transform: translate(-50%, -50%) rotate(45deg);
}

.close-icon::after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

main {
  line-height: 2.1rem;
}

h1 {
  font-size: 3.5rem;
  font-family: Metropolis, sans-serif;
}

.container {
  padding: 0 2rem;
}

.extra-padding {
  padding-bottom: 3rem !important;
  padding-top: 3rem !important;
}

.light-grey {
  background-color: var(--projects-color);
}

.description {
  font-size: 1.3rem;
}

.release-calendar-button {
  background-color: transparent;
  border: 2px solid var(--button-color);
  padding: 18px 25px;
  text-transform: uppercase;
  cursor: pointer;
  font-size: 0.9em;
  font-weight: bold;
  margin-bottom: 2rem;
}

.release-calendar-button:hover {
  background-color: var(--button-color);
  color: var(--navbar-bg-color);
}

.green-bar {
  background: linear-gradient(45deg, #6db33f 26%, #80ea6e 89%);
  width: 100%;
  height: 6px;
}

.search-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search-input {
  margin-top: 1rem;
  width: 40%;
  padding: 10px 15px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 16px;
  outline: none;
  background-color: white;
  transition: background-color 0.3s ease, box-shadow 0.3s ease;
}

.search-input:focus {
  background-color: #f8fafd;
  box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
}

.products-section {
  padding: 60px 20px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 1200px;
  margin: 0 auto;
  box-sizing: border-box;
}

.product-card {
  background-color: var(--card-bg-color);
  border-radius: 8px;
  padding: 30px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border: 2px solid var(--projects-color);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  min-height: 250px;
  box-sizing: border-box;
  cursor: pointer;
  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

.product-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.product-icon {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-weight: normal;
}

.product-icon h3 {
  font-weight: 500;
}

.product-icon img {
  width: 48px;
  height: 48px;
  padding: 10px 0;
}

.product-title {
  font-family: 'Metropolis', sans-serif;
  font-size: 1.5em;
  margin: 0;
  color: var(--button-color);
}

.product-description {
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
  line-height: 1.7rem;
  color: var(--text-card-description);
  margin: 10px 0;
}

.product-version {
  line-height: 1.5rem;
  display: flex;
  align-items: center;
  gap: 10px;

  font-family: 'Open Sans', sans-serif;
  font-size: 0.8em;
  color: var(--text-card-description);
}

.version-badge {
  background-color: var(--version-green-color);
  color: var(--text-white);
  padding: 0px 8px;
  border-radius: 4px;
  font-weight: bold;
}

@media (max-width: 769px) {
  .products-section {
    padding: 40px 10px;
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  .product-card {
    width: calc(100% - 40px); /* */
    margin: 0;
  }

  .show {
    display: block;
  }
}

@media (min-width: 770px) and (max-width: 999px) {
  .products-section {
    padding: 60px 20px;
    justify-content: center;
    gap: 10px;
  }

  .product-card {
    width: calc((100% - (2 * 10px)) / 3);
    min-width: unset;
    max-width: unset;
    padding: 30px;
    margin: 0;
  }

  .show {
    display: block;
  }
}

@media (min-width: 1000px) {
  .navbar {
    height: 73px;
    justify-content: flex-start;
    padding-left: 20px;
  }

  .logo-container {
    width: 300px;
    margin-right: 40px;
  }

  .hamburger {
    display: none;
  }

  .nav-links {
    display: flex;
    flex-grow: 1;
    justify-content: flex-end;
    margin-right: 20px;
  }

  .has-dropdown:hover .dropdown-menu {
    display: block;
  }

  .products-section {
    gap: 20px;
    padding: 60px 20px;
    justify-content: center;
  }

  .product-card {
    width: calc((100% - (2 * 25px)) / 3);
    min-width: unset;
    max-width: 350px;
    margin: 0;
    padding: 30px;
  }
}

